fix(sunlight): Bug fix for jump issue in off-hour template

--- a/app/modules/sunlight/features/chat/setupAssistantPages/_ct-offhours.scss
+++ b/app/modules/sunlight/features/chat/setupAssistantPages/_ct-offhours.scss
@@ -85,7 +85,7 @@
   }
 
   .business-hours-message.h4 {
-    @include vr-spacing(pt, 1.5);
+    @include vr-spacing(pt, 1.75);
   }
 
   .day-picker {
